# invoice-analysis

./: README.md  latest.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  vite.config.ts
.github/workflows/: publish.yml
public/: mock-invoice.js
scripts/: run-local-updater.bat  updater.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/Layout/: index.tsx
src/components/: PdfPreview.tsx
src/pages/home/: index.tsx
src/pages/home/components/ConfigPanel/: index.tsx
src/pages/home/components/InvoiceDetail/: index.tsx
src/pages/home/components/InvoiceItemsTable/: index.tsx
src/router/: index.tsx
src/services/: pdfService.ts
src/styles/: index.scss
src/utils/: pdfParser.ts  pdfjs-checker.ts
